# potenup3-pj03_deep_learning

./: .env copy  .gitignore  1_0_huggingface.ipynb  1_1_object_detection_yolo.ipynb  1_2_segmentation.ipynb  1_3_clip.ipynb  1_4_ocr.ipynb  1_5_1_basic_opencv.ipynb  1_5_2_video_opencv.py  1_5_3_mediapipe_hands.py  1_5_6_mediapipe_holistic.py  1_5_7_mediapipe_collect_data.py  1_5_8_mediapipe_train.ipynb  1_5_9_mediapipe_pred.py  1_7_stt_tts.ipynb  1_8_ollama_api.ipynb  20260316_homework.ipynb  20260317_homework.ipynb  20260325_hw.ipynb  20260326_hw.ipynb  README.md  hand_data.csv  main.py  pyproject.toml  run_gpt.cmd  scissors_rock_paper.pkl  임경빈_mediapipe_hands1.py  임경빈_mediapipe_hands2.py  임경빈_mediapipe_hands3.py
1_5_10_deepface_exercise/: exercise.ipynb  main.py  pyproject.toml
1_5_10_deepface_exercise/mydb/: ds_model_vggface_detector_opencv_aligned_normalization_base_expand_0.pkl  ds_model_vggface_detector_yolov12n_aligned_normalization_base_expand_0.pkl
llm_exercise/: 1_10_fine_tuning_qwen.ipynb  1_11_fine_tuning_qwen_custom_data.ipynb  1_9_huggingface_llm.ipynb  pyproject.toml
llm_project/: chat_history.json  main.py
llm_project/pages/: chatbot_api.py  chatbot_hw.py
private_project/: 01_openai_boot.ipynb
private_project/chatgpt-portable/: chat.db  db.py  main.py  run_gpt.cmd
private_project/tk-bot/: kanade.py
project_server/: main.py  main2_seg.py  request_test.ipynb
qwen_tts_exercise/: 1_7_qwen3_tts.ipynb  main.py  pyproject.toml
vision_project/: main.py
vision_project/pages/: 01_object_detection.py  02_segmentation-SAM3.py  02_segmentation.py  03_clip.py  fastapi_server_test.py  test.py
