[project]
name = "llm-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "jupyter>=1.1.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "unsloth>=2026.3.17",
    "unsloth-zoo>=2026.3.6",
]
[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo.git" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
